Fix more test failures in cheap-rest.